# hold_em

./: .coveragerc  .gitignore  LICENSE-MIT  README.rst  hold_em.py  pyproject.toml  requirements.txt  sample_input.txt  setup.py
hold_em/: card.py  hand.py  player.py
pip-wheel-metadata/hold_em.dist-info/: LICENSE-APACHE  METADATA  top_level.txt
sample_input/: full_house_community_cards.txt  invalid_community_cards.txt  invalid_player_cards.txt  players_with_same_name.txt  too_many_characters_in_community_cards.txt  too_many_community_cards.txt
tests/: test_card.py  test_hand.py  test_player.py
